--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "homepage": "https://jtaavola.github.io/breathe",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@mantine/core": "^5.5.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
