--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,8 @@ jobs:
           node-version: 18
           cache: 'npm'
       - run: npm ci
-      - run: npm run deploy
+      - run: npm run build
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: build
